--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+<body class="bg-gray-100 flex items-start justify-center min-h-screen p-4">
     <div id="login-page" class="bg-white p-6 md:p-8 rounded-2xl shadow-xl w-full max-w-sm border border-gray-200 hidden">
         <h1 class="text-2xl md:text-3xl font-bold text-center text-gray-800 mb-6 md:mb-8">Login</h1>
         <form id="login-form" class="space-y-4">
