--- a/index.html
+++ b/index.html
@@ -90,8 +90,12 @@
             </div>
             <button id="logout-btn"
                 class="absolute top-0 right-0 px-4 py-2 bg-gray-300 text-gray-800 font-medium rounded-lg hover:bg-gray-400">Sair</button>
-	<button id="open-change-password-btn"
-    class="absolute top-12 right-0 px-4 py-2 bg-yellow-500 text-white font-medium rounded-lg hover:bg-yellow-600">Alterar Senha</button>
+	<button id="open-change-password-btn" title="Alterar Senha"
+    class="absolute top-12 right-0 p-2 bg-gray-600 text-white rounded-full hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M18 8a6 6 0 01-7.743 5.743L10 14l-1 1-1 1H6v-1l-1-1-1-1H2v-2l1-1v-2l-1-1V6h1l1-1h2l1-1h2l1-1h2l1 1v2l-1 1v2l1 1v2h-1l1 1h-2l1-1zM6 8a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
+    </svg>
+</button>
         </div>
 
         <p id="user-id-display" class="text-sm text-transparent text-center mb-4"></p>
