Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
         const resetPasswordMessage = document.getElementById('reset-password-message');
         const motoristasTable = document.getElementById('motoristas-table');
 
-// --- LÓGICA PARA ALTERAR A PRÓPRIA SENHA ---
+// --- LÓGICA PARA ALTERAR A PRÓPRIA SENHAa ---
 
 openChangePasswordBtn.addEventListener('click', () => {
     changePasswordForm.reset();
