--- a/index.html
+++ b/index.html
@@ -820,36 +820,47 @@
             <option value="Anderson de Oliveira Ferreira"></option>
             <option value="Augusto Gabriel Galhote Silva"></option>
             <option value="Cícero Vilaça de Sousa"></option>
+            <option value="Claudio Tozeto Bertti"></option>
             <option value="Clodoaldo Martins do Nascimento Junior"></option>
             <option value="Danilo Pavret Ramos"></option>
             <option value="Diomedes Guimarães Correa Jr."></option>
             <option value="Edmilson do Patrocínio"></option>
             <option value="Edson Luiz Galioti Vitorino"></option>
             <option value="Erick C. S. Toledo"></option>
+            <option value="Eusébio San Martin Roberto"></option>
             <option value="Evaldo Lucio de Alvarenga"></option>
             <option value="Fabio Rodrigues De Lima"></option>
             <option value="Felipe Egídio de Miranda"></option>
             <option value="Felipe Leite Pestana"></option>
+            <option value="Gabriel Henrique Bezerra Rosa"></option>
             <option value="Glaucia Maria de Souza Farias"></option>
+            <option value="Giovanna F. Villanova de Souza"></option>
             <option value="Hudson Dias Gomes"></option>
+            <option value="Illas de Faria Ribeiro"></option>
             <option value="João Valdeci da Silva"></option>
             <option value="Kleber Batista dos Santos"></option>
+            <option value="Luis Alberto de Morais"></option>
             <option value="Luis Claudio Ramos"></option>
             <option value="Marcelo do Amaral"></option>
             <option value="Marcos Antonio Moreira"></option>
             <option value="Marcos Cid Pereta"></option>
+            <option value="Marcos Roberto Marques"></option>
             <option value="Marina Evangelista de Paula"></option>
+            <option value="Matheus Valerio Duarte Santos"></option>
             <option value="Mauricio Paulo da Silva"></option>
             <option value="Mauro Rocha dos Santos"></option>
             <option value="Moisés Vitorino dos Santos"></option>
             <option value="Natan Batista dos Santos Jr."></option>
+            <option value="Otávio Leite Pestana"></option>
             <option value="Rafael Camargo"></option>
             <option value="Rafael Florentino"></option>
             <option value="Raniere Da Silva Almeida"></option>
             <option value="Ricardo Beltrame Rocha"></option>
+            <option value="Ricardo Lopes Justo Fernandes"></option>
             <option value="Rodrigo Américo Araújo"></option>
             <option value="Rodrigo Peretta Carneiro"></option>
             <option value="Rudge Nunes de Assis"></option>
+            <option value="Tiago Paiva"></option>
             <option value="Titilo Prado"></option>
             <option value="Wagner Bonelli"></option>
             <option value="William Rodrigues Watanabe"></option>
